// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Publish Test File via Babel xx: cjs 1`] = `
"/*! jsx v1.0.0 by Sebastian Werner <s.werner@sebastian-software.de> */
'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

function _interopDefault (ex) { return (ex && (typeof ex === 'object') && 'default' in ex) ? ex['default'] : ex; }

var React = _interopDefault(require('react'));
var reactIntl = require('react-intl');
var Header = _interopDefault(require('components/Header'));

/* eslint-disable import/no-unresolved */
function MyPage() {
  return <>
      <Header>Title</Header>
      <button type=\\"submit\\">
        <reactIntl.FormattedMessage id=\\"press-button\\" />
      </button>
    </>;
}

exports.MyPage = MyPage;
//# sourceMappingURL=index.cjs.js.map
"
`;

exports[`Publish Test File via Babel xx: esm 1`] = `
"/*! jsx v1.0.0 by Sebastian Werner <s.werner@sebastian-software.de> */
import React from 'react';
import { FormattedMessage } from 'react-intl';
import Header from 'components/Header';

/* eslint-disable import/no-unresolved */
function MyPage() {
  return <>
      <Header>Title</Header>
      <button type=\\"submit\\">
        <FormattedMessage id=\\"press-button\\" />
      </button>
    </>;
}

export { MyPage };
//# sourceMappingURL=index.esm.js.map
"
`;

exports[`Publish Test File via Babel xx: umd 1`] = `
"/*! jsx v1.0.0 by Sebastian Werner <s.werner@sebastian-software.de> */
(function (global, factory) {
  typeof exports === 'object' && typeof module !== 'undefined' ? factory(exports, require('react'), require('react-intl'), require('components/Header')) :
  typeof define === 'function' && define.amd ? define(['exports', 'react', 'react-intl', 'components/Header'], factory) :
  (global = global || self, factory(global.jsx = {}, global.React, global.reactIntl, global.Header));
}(this, (function (exports, React, reactIntl, Header) { 'use strict';

  React = React && Object.prototype.hasOwnProperty.call(React, 'default') ? React['default'] : React;
  Header = Header && Object.prototype.hasOwnProperty.call(Header, 'default') ? Header['default'] : Header;

  /* eslint-disable import/no-unresolved */
  function MyPage() {
    return <>
        <Header>Title</Header>
        <button type=\\"submit\\">
          <reactIntl.FormattedMessage id=\\"press-button\\" />
        </button>
      </>;
  }

  exports.MyPage = MyPage;

  Object.defineProperty(exports, '__esModule', { value: true });

})));
//# sourceMappingURL=index.umd.js.map
"
`;
